# DielectricStackGenerator

./: AddTrailingZeros.m  Coefficient.m  Evolution.m  Fitness.m  FitnessLWP.m  FitnessSWP.m  Generate.m  GenerateFromSeed.m  LongWavePass.m  Mutation.m  NewCleanImpl.7z  Offspring.m  Rank.m  RankLWP.m  RankSWP.m  Replacement.m  Run.m  SelectOtherParent.m  Selection.m  ShortWavePass.m  TestMatrixMath.m
Archive/: Fitness.m  GenerateIndividual.m  GeneratePopulation.m  MutateIndividual.m  PlotIndividual.m  RemoveTrailingZeros.m  Reproduce.m  TestMatrixMath.m
Archive/C++ Threaded/: DielectricGenerator_v3.sln
Archive/C++ Threaded/DielectricGenerator_v3/: DielectricGenerator_v3.vcxproj  DielectricGenerator_v3.vcxproj.filters  Functions.cpp  Functions.h  IDs.cpp  IDs.h  Matrix.cpp  Matrix.h  Member.cpp  Member.h  Population.cpp  Population.h  Structs.h  main.cpp
C++ Threaded/: DielectricGenerator_v3.sln
C++ Threaded/DielectricGenerator_v3/: DielectricGenerator_v3.vcxproj  DielectricGenerator_v3.vcxproj.filters  Functions.cpp  Functions.h  IDs.cpp  IDs.h  Matrix.cpp  Matrix.h  Member.cpp  Member.h  Population.cpp  Population.h  Structs.h  main.cpp
dsg/: .flake8  pyproject.toml
dsg/dsg/: Configuration.py  Individual.py  Population.py  Utils.py  main.py
dsg/tests/: test_dsg.py
